fix partners covers

--- a/src/app/components/Partners/Partners.module.css
+++ b/src/app/components/Partners/Partners.module.css
@@ -1,5 +1,6 @@
 .covers {
   min-width: 320px;
+  min-height: 1025px;
   width: 100%;
   position: absolute;
   overflow: hidden;
